# tauri-plugin-download

./: Cargo.toml  LICENSE_MIT  README.md  package.json  pnpm-lock.yaml
.github/workflows/: format.yml  lint.yml
examples/svelte-app/: package.json  pnpm-lock.yaml
examples/svelte-app/src/: App.svelte
examples/svelte-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/svelte-app/src-tauri/src/: main.rs
src/: lib.rs
webview-dist/: index.d.ts  index.min.js  index.mjs
webview-src/: index.ts  rollup.config.js  tsconfig.json
