[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = [ "FabianLars <fabianlars@fabianlars.de>" ]
repository = ""
edition = "2021"
rust-version = "1.59"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.2.0", features = ["dialog-save"] }
tauri-plugin-download = { path = "../../../" }

[build-dependencies]
tauri-build = { version = "1.2.0", features = [] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
